# codemie

./: .coveragerc  .dockerignore  .env  .gitignore  .gitleaks.toml  .gitleaksignore  .hadolint.yaml  .pre-commit-config.yaml  .terraform-docs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  google_credentials_sample.json  litellm_config.yaml  log_conf.prod.json  pyproject.toml  pytest.ini  skills_architecture.md  sonar-project.properties
.ai-run/guides/: project.md  quality-gates.md
.ai-run/guides/agents/: agent-tools.md  custom-tool-creation.md  langchain-agent-patterns.md  tool-overview.md
.ai-run/guides/api/: endpoint-conventions.md  rest-api-patterns.md
.ai-run/guides/architecture/: layered-architecture.md  project-structure.md  service-layer-patterns.md
.ai-run/guides/data/: database-optimization.md  database-patterns.md  elasticsearch-integration.md  repository-patterns.md
.ai-run/guides/development/: configuration-patterns.md  error-handling.md  local-testing.md  logging-patterns.md  performance-patterns.md  security-patterns.md  setup-guide.md
.ai-run/guides/integration/: cloud-integrations.md  confluence-integration.md  external-services.md  google-docs-integration.md  jira-integration.md  llm-providers.md  mcp-integration.md  xray-integration.md
.ai-run/guides/standards/: code-quality.md  git-workflow.md
.ai-run/guides/testing/: testing-api-patterns.md  testing-patterns.md  testing-service-patterns.md
.ai-run/guides/workflows/: langgraph-workflows.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  refactor-cleaner.md  solution-architect.md  unit-tester.md
.claude/skills/babysit-mr/: SKILL.md
.claude/skills/brianna/: SKILL.md
.claude/skills/codemie-mr/: SKILL.md
.claude/skills/cs-review-loop/: SKILL.md
.claude/skills/dev-review-loop/: SKILL.md
.claude/skills/gitlab-mr-code-review/: SKILL.md
.claude/skills/qa-lead/: SKILL.md
.claude/skills/tech-lead/: SKILL.md
.codemie/: codemie-cli.config.json
.codemie/guides/: WRITING_GUIDELINES.md
.codemie/guides/agents/: agent-tools.md  custom-tool-creation.md  langchain-agent-patterns.md  tool-overview.md
.codemie/guides/api/: endpoint-conventions.md  rest-api-patterns.md
.codemie/guides/architecture/: layered-architecture.md  project-structure.md  service-layer-patterns.md
.codemie/guides/data/: database-optimization.md  database-patterns.md  elasticsearch-integration.md  repository-patterns.md
.codemie/guides/development/: configuration-patterns.md  error-handling.md  local-testing.md  logging-patterns.md  performance-patterns.md  security-patterns.md  setup-guide.md
.codemie/guides/integration/: cloud-integrations.md  confluence-integration.md  external-services.md  google-docs-integration.md  jira-integration.md  llm-providers.md  mcp-integration.md  xray-integration.md
.codemie/guides/standards/: code-quality.md  git-workflow.md
.codemie/guides/templates/: guide-template.md  pattern-template.md  reference-template.md
.codemie/guides/testing/: testing-api-patterns.md  testing-patterns.md  testing-service-patterns.md
.codemie/guides/workflows/: langgraph-workflows.md
.codemie/virtual_assistants/: codemie-dev-agent.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.sonarlint/: connectedMode.json
config/authorized_applications/: authorized-applications-config.yaml
config/budgets/: budgets-config.yaml
config/categories/: assistant-categories.yaml  kata-roles.yaml  kata-tags.yaml
config/customer/: customer-config.yaml
config/datasources/: datasources-config.yaml
config/index-dumps/: codemie-codemie-onboarding.json
config/katas/assistant-prompt-mastery/: kata.yaml
config/katas/assistants-marketplace-gateway-to-ai-solutions/: kata.yaml  steps.md
config/katas/build-your-first-ai-assistant-with-python-sdk/: kata.yaml  steps.md
config/katas/create-your-ai-assistant-with-codemie/: kata.yaml  steps.md
config/katas/discover-codemie-with-faq-assistant/: kata.yaml  steps.md
config/katas/getting-started-with-codemie/: kata.yaml  steps.md
config/katas/master-ai-skills/: kata.yaml  steps.md
config/katas/mastering-codemie-code-cli/: kata.yaml  steps.md
config/leaderboard/: framework_metadata.yaml
config/llms/: llm-aws-config.yaml  llm-azure-config.yaml  llm-dial-config.yaml  llm-gcp-config.yaml
config/mcp/: mcp-commands-config.yaml
deploy-templates/: Chart.yaml  README.md  values.yaml
deploy-templates/templates/: NOTES.txt  _helpers.tpl  code-executor-rbac.yaml  deployment.yaml  ingress-callbacks-index.yaml  ingress-swagger.yaml  ingress-webhooks.yaml  ingress.yaml  rollout.yaml  secret-process-auth.yaml  service-preview.yaml  service.yaml  serviceaccount.yaml
deploy-templates/tests/: merge_env_lists_test.yaml
docs/: ai-adoption-framework.md
docs/superpowers/: agentcore-non-streaming.md
docs/workflows/: 01_introduction.md  02_configuration_reference.md  03_workflow_states.md  04_state_transitions.md  05_context_management.md  06_advanced_features.md  07_specialized_nodes.md  08_integration_capabilities.md  09_best_practices.md  10_examples.md  11_troubleshooting.md  AGENT_PRIMER.md  README.md
scripts/git-hooks/: pre_commit.sh
scripts/license_headers/: README.md  __init__.py  check_license_headers.py  license_template.txt
scripts/memory_analysis/: 01_quick_comparison.py  02_consecutive_comparison.py  03_export_html.py  04_export_speedscope.py  05_detailed_inspection.py  06_timeline_graph.py  07_export_csv.py  08_find_leak_candidates.py  09_complete_analysis.py  HOW_TO_USE.md  QUICKSTART.md  README.md  memory_analysis_helpers.py
scripts/sonar/: run-local-sonar.js
specs/EPMCDME-9774-litellm-ui-visibility/: implementation-plan.md
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  versions.tf
tests/: .env.test  conftest.py
tests/codemie/: test_tool_callback.py
tests/codemie_tools/: __init__.py
tests/enterprise/: __init__.py  conftest.py  test_graceful_degradation.py  test_loader.py
(+1943 files in other folders)
