[project]
name = "codemie"
requires-python = ">=3.12,<4.0"

[tool.poetry]
name = "codemie"
version = "0.8.0"
description = "Research and Development project to automate doc generation/QnA for repos"
authors = [
    "Vadym Vlasenko <vadym_vlasenko@epam.com>",
    "Andriy Lukashchuk <andriy_lukashchuk@epam.com>",
    "Sviatoslav Likhtarchyk <sviatoslav_likhtarchyk@epam.com>",
]
readme = "README.md"
include = ["llm-templates/**/*"]
packages = [{ include = "codemie", from = "src" }, { include = "codemie_tools", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14" # upper limit is required because of youtube-transcript-api from markitdown
azure-devops = "^7.1.0b4"
azure-keyvault-keys = "^4.9.0"
azure-keyvault-secrets = "^4.8.0"
azure-mgmt-core = "^1.4.0"
azure-mgmt-resource = "^23.0.1"
azure-mgmt-storage = "^21.1.0"
azure-storage-blob = "^12.23.1"
apscheduler = "^3.10.4"
croniter = "^3.0.3"
datasets = "^2.20.0"
exporter = "^0.0.4"
fastapi = "^0.133.0"
google-auth = "^2.32.0"
google-cloud-kms = "^2.24.1"
hvac = "^2.4.0"
jinja2 = "^3.1.6"
langchain-anthropic = "1.4.0"
langchain-aws = "1.4.3"
langchain-elasticsearch = "1.0.0"
langchain-google-vertexai = "3.2.3"
langgraph = "1.1.6"
langgraph-checkpoint = "^3.0.1"
pdfplumber = "^0.11.9"
langgraph-bigtool = "0.0.3"
networkx = "^3.3"
python-jose = "^3.4.0"
python-multipart = "~0.0.30"  # Security (EPMCDME-12869): pin >=0.0.30 to fix CVE
uvicorn = "^0.30.3"
unstructured = "^0.18.18"
deepdiff = "^8.6.2"
nats-py = "2.10.0"
protobuf = ">=5.29.6,<6.0"
pathspec = "^0.12.1"
openhands_aci = "0.1.2"
codemie-enterprise = {version = "2.3.32", source = "codemie-artifact-registry-gcp", optional = true}
nltk = ">=3.9.4"
sqlmodel = "^0.0.38"
psycopg2-binary = "^2.9.10"
psutil = "^7.1.3"
alembic = "^1.15.2"
alembic-postgresql-enum = "^1.7.0"
aiosmtplib = "^3.0.0"
argon2-cffi = "^23.1.0"
slowapi = "^0.1.9"
tornado = "~6.5.6"  # Security (EPMCDME-12871): pin >=6.5.6 to fix CVE-2026-49853, CVE-2026-49855 (tornado HTTP request smuggling / header injection)
ipykernel = "^6.25.2"
pytesseract = "^0.3.13"
langgraph-supervisor = "0.0.31"
bleach = "^6.2.0"
langchain-markitdown = "^0.1.8"
pypandoc-binary = "^1.15"
cairosvg = {version = "^2.7.1", optional = true}
codemie-sdk-python = "^0.1.159"
langchain-anthropic-smart-cache = "^0.2.3"
wrapt = "^1.17.3"
orjson = "^3.11.7"
cachetools = "^6.2.4"
opentelemetry-api = "^1.41.1"
opentelemetry-exporter-otlp-proto-common = "^1.41.1"
opentelemetry-exporter-otlp-proto-http = "^1.41.1"
opentelemetry-proto = "^1.41.1"
opentelemetry-sdk = "^1.42.1"
opentelemetry-semantic-conventions = "^0.63b1"
opentelemetry-instrumentation-fastapi = "^0.63b1"
opentelemetry-instrumentation-sqlalchemy = "^0.63b1"
opentelemetry-instrumentation-httpx = "^0.63b1"
prometheus-fastapi-instrumentator = ">=0.9.0"
pyroscope-io = "^1.0.8"
jsonschema = {version = ">=4.18.0,<5.0.0", extras = ["format-nongpl"]}
asyncpg = "^0.30.0"
PyGithub= "^2.2.0"
atlassian-python-api = "^4.0.6"
azure-core = "^1.38.0"
azure-identity = "^1.16.0"
boto3 = "^1.43.12"
chardet = "^5.2.0"
elastic-transport = "8.17.1"
elasticsearch = "8.19.3"
gitpython = ">=3.1.47"
google-api-python-client = "^2.137.0"
googlemaps = "^4.10.0"
httpx = "^0.28.1"
kubernetes = "^35.0.0"
jupyter-kernel-gateway = "^3.0.1"
langchain = "1.2.15"
langchain-community = "0.4.1"
langchain-core = "1.3.3"
langchain-experimental = "0.4.1"
langchain-google-community = "3.0.5"
langchain-openai = "^1.2.1"
litellm = "1.84"
langchain-tavily = "^0.2.13"
markdownify = "^1.2.0"
markitdown = {extras = ["all"], version = "^0.1.2"}
matplotlib = "3.10.8"
msrest = "0.7.1"
openapi-schema-pydantic = "^1.2.4"
packaging = ">=24.0"
pandas = "^2.2.2"
Pillow = "^12.1.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-docx = "^1.1.0"
docx2txt = "^0.8"
pymysql = "^1.1.1"
python-dotenv = "^1.0.0"
python-gitlab = "^4.6.0"
python-pptx = "^1.0.2"
sqlalchemy = "^2.0.35"
tiktoken = "0.12.0"
wikipedia = "^1.4.0"
flake8 = "^7.1.1"
zephyr-python-api = "^0.1.0"
clevercsv = "^0.8.3"
influxdb-client = "^1.48.0"
pymssql = "2.2.11"
markdown = "^3.8"
opencv-python-headless = "^4.11.0.86"
tabulate = "^0.9.0"
llm-sandbox = {extras = ["k8s"], version = "^0.3.21"}
email-validator = "^2.3.0"
jaraco-context = "^6.1.0"
wheel = "^0.46.3"
google-cloud-aiplatform = "^1.140.0"
# Security (EPMCDME-12867): pin >=2.13.0 to fix CVE-2026-48526 (PyJWT public-key JWK accepted as HMAC secret enables forged HS256 tokens); also clears CVE-2026-48522..48525
pyjwt = "^2.13.0"
pyasn1 = "^0.6.3"
setuptools = "^82.0.1"
ecdsa = "^0.19.1"
# Security (EPMCDME-12868): pin >=48.0.1 to fix GHSA-537c-gmf6-5ccf (cryptography weak RSA key handling)
cryptography = "~48.0.1"
pillow = "^12.2.0"
lxml = "^6.1.0"
jupyter-server = ">=2.20.0"  # Security (EPMCDME-12962): pin >=2.20.0 to fix CVE-2026-44727 (GHSA-fcw5-x6j4-ccmp arbitrary code exec in jupyter-server)
langchain-classic = "1.0.7"
openai = "2.26.0"
# Security (EPMCDME-13005): pin ^0.8.18 to fix GHSA-f4xh-w4cj-qxq8 (arbitrary server-side file read via TracingMiddleware)
langsmith = "^0.8.18"
opentelemetry-exporter-prometheus = "^0.63b1"
vsdx = "^0.6.1"
starlette = "~1.3.1"  # Security (EPMCDME-12870): pin >=1.3.1 to fix CVE-2026-48818 and CVE-2026-54283
subvertpy = ">=0.11"
# Security (EPMCDME-13006): pin ^8.2.1 to fix GHSA-rpj2-4hq8-938g (CWE-502 unsafe YAML deserialization in vcrpy, arbitrary code exec)
vcrpy = "^8.2.1"

[tool.poetry.extras]
enterprise = ["codemie-enterprise"]
pdf-svg = ["cairosvg"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
ruff = "^0.5.4"
pytest-httpx = "^0.35.0"
pre-commit = "^3.8.0"
pip-licenses = "^5.5.0"

[[tool.poetry.source]]
name = "codemie-artifact-registry-gcp"
url = "https://europe-west3-python.pkg.dev/or2-msq-epmd-edp-anthos-t1iylu/codemie-enterprise-python/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 120
exclude = [".agents", ".claude"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"


[tool.ruff.lint]
# Enable rules, in addition to the defaults.
select = ["E", "F", "B", "N", "C4", "G", "T20", "RSE", "SIM", "C", "W", "PERF", "ISC"]

ignore = [
    "B008",
    "B009",
    "B027",
    "B904",
    "G004",
    "N805",
    "N815",
    "N818",
    "ISC001",   # Conflicts with formatter
    "ISC003",   # Allow explicit string concatenation with +
    "PERF401", # Fix this issue and remove from ignore
    "PERF403", # Fix this issue and remove from ignore
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["codemie", "codemie_tools"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds the value below.
max-complexity = 16

[tool.ruff.lint.per-file-ignores]
"plugin_toolkit.py" = ["SIM108"]
"*plugin/generated/*" = ["ALL"]
"src/external/*" = ["ALL"]
"src/codemie/clients/provider/client/*" = ["ALL"]
"src/codemie_tools/*" = ["B007", "B010", "B020", "B905", "N802", "G201", "F401"]

"tests/*" = ["E501", "SIM117", "B905"]
"*template*" = ["E501"]
"*prompt*" = ["E501"]
"*_vars*" = ["E501"]
"*_tool*" = ["E501"]
"prebuilt_assistants.py" = ["E501"]
"scripts/memory_analysis/*" = ["T201", "SIM108"]
"src/external/utility_scripts/import_katas.py" = ["T201"]  # CLI script needs print statements
"src/codemie/service/kata_import_service.py" = ["C901", "SIM102"]  # Validation function needs comprehensive checks
"src/codemie/service/analytics/queries/ai_adoption_framework/composite_queries.py" = ["E501"]
"src/codemie/service/analytics/queries/ai_adoption_framework/query_builder.py" = ["E501"]
"src/codemie/service/analytics/queries/ai_adoption_framework/dimension_queries.py" = ["E501"]
"src/codemie/service/analytics/queries/ai_adoption_framework/score_expressions.py" = ["E501"]

[tool.poetry.scripts]
download_nltk_packages = "src.external.utility_scripts.setup_nltk:download_nltk_packages"
import-katas = "src.external.utility_scripts.import_katas:main"

[tool.pip-licenses]
ignore-packages = [
    "grep-ast", # UNKNOWN, it is Apache License 2.0
    "filelock", # Unlicense
    "docx2txt", # UNKNOWN, it is MIT License
    "langgraph-bigtool", # UNKNOWN
    "tiktoken", # MIT License
    "llm-sandbox", # UNKNOWN, it is MIT License
    "codemie-sdk-python", # UNKNOWN
    "codemie-enterprise", # UNKNOWN
    "email-validator", # The Unlicense (Unlicense)
    "subvertpy" # GPLv2+; SVN client library required for SVN datasource support
]
allow-only = """
    3-Clause BSD License;\
    Apache 2.0;\
    Apache Software License;\
    Apache Software License; BSD License;\
    Apache Software License; MIT License;\
    Apache-2.0;\
    Apache-2.0 AND BSD-2-Clause;\
    Apache-2.0 AND MIT;\
    Apache-2.0 OR BSD-3-Clause;\
    Apache-2.0 OR MIT;\
    BSD 3-Clause OR Apache-2.0;\
    BSD License;\
    BSD-2-Clause;\
    BSD-2-Clause AND Apache-2.0 WITH LLVM-exception;\
    BSD-3-Clause;\
    BSD-3-Clause, Apache-2.0, dependency licenses;\
    GNU Lesser General Public License v2 or later (LGPLv2+);\
    GNU Lesser General Public License v3 (LGPLv3);\
    GNU Lesser General Public License v3 or later (LGPLv3+);\
    LGPLv3+;\
    GNU Library or Lesser General Public License (LGPL);\
    ISC License (ISCL);\
    LGPL-3.0-only;\
    MIT;\
    MIT AND PSF-2.0;\
    MIT License;\
    MIT License; Mozilla Public License 2.0 (MPL 2.0);\
    MIT-CMU;\
    Mozilla Public License 2.0 (MPL 2.0);\
    PSF-2.0;\
    Python Software Foundation License;\
    Simplified BSD;\
    MPL-2.0 AND (Apache-2.0 OR MIT);\
    MPL-2.0;\
    ISC;\
"""
